--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -4,3 +4,9 @@
     text-shadow: 5px 5px 2px rgb(197, 197, 197);
 }
 
+@media (max-width: 560px) {
+    .title {
+        padding-left: 1%;
+        font-size: 2rem;
+    }
+}
