--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,4 +1,11 @@
 .about-content {
     font-size: 1.5rem;
-    padding: 0 2% ;
+    padding: 0 2%;
+}
+
+@media (max-width : 560px) {
+    .about-content {
+        font-size: 1rem;
+        padding: 0 1%;
+    }
 }
