--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -11,3 +11,19 @@
 .contact-top p {
     font-size: 1.5rem;
 }
+
+@media (max-width : 560px) {
+    .contact-section {
+        padding: 1rem 1rem;
+    }
+
+    .contact-top h2 {
+        font-size: 3rem;
+        margin-bottom: 2rem;
+    }
+
+    .contact-top p {
+        font-size: 1.5rem;
+    }
+
+}
